add travis config, fix build.gradle, update gradle wrapper

--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ ext {
         abbreviatedId = "git-" + head.abbreviatedId
     } catch (GrgitException ignored) {
         abbreviatedId = "wip"
-        isRelease = true
+        isRelease = false
     }
 }
 
