--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-version = "1.0.0-beta-7"
+version = "1.0.0-beta-7a"
 
 import org.ajoberstar.grgit.Grgit
 import org.ajoberstar.grgit.exception.GrgitException
